@@ -1,20 +1,14 @@
 package gtu.cse.se.altefdirt.aymoose.facility.internal.infra.adapter.jpa.repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.Optional;
 import org.springframework.stereotype.Component;
 
 import gtu.cse.se.altefdirt.aymoose.facility.internal.domain.Court;
-import gtu.cse.se.altefdirt.aymoose.facility.internal.domain.CourtDetails;
-import gtu.cse.se.altefdirt.aymoose.facility.internal.domain.CourtFactory;
 import gtu.cse.se.altefdirt.aymoose.facility.internal.domain.CourtRepository;
-import gtu.cse.se.altefdirt.aymoose.facility.internal.domain.Measurements;
-import gtu.cse.se.altefdirt.aymoose.facility.internal.infra.adapter.jpa.CourtEntity;
 import gtu.cse.se.altefdirt.aymoose.facility.internal.infra.adapter.jpa.JpaCourtRepository;
+import gtu.cse.se.altefdirt.aymoose.facility.internal.infra.mapper.CourtMapper;
 import gtu.cse.se.altefdirt.aymoose.shared.domain.AggregateId;
-import gtu.cse.se.altefdirt.aymoose.shared.domain.Capacity;
-import gtu.cse.se.altefdirt.aymoose.shared.domain.Price;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
@@ -23,73 +17,59 @@ import lombok.RequiredArgsConstructor;
 @Transactional
 class CourtRepositryImpl implements CourtRepository {
 
-    private final JpaCourtRepository jpaCourtRepository;
-    private final CourtFactory courtFactory;
-
-    private Court build(CourtEntity courtEntity) {
-        return courtFactory.load(AggregateId.from(courtEntity.getId()),
-                AggregateId.from(courtEntity.getUserId()),
-                AggregateId.from(courtEntity.getFacilityId()),
-                new CourtDetails(courtEntity.getName(), courtEntity.getDescription()),
-                new Measurements(courtEntity.getHeight(), courtEntity.getWidth()),
-                new Capacity(courtEntity.getCapacity()),
-                new Price(courtEntity.getPrice()));
-    }
+    private final JpaCourtRepository courtRepository;
+    private final CourtMapper mapper;
 
     @Override
     public Court save(Court court) {
-        CourtEntity courtEntity = jpaCourtRepository.save(CourtEntity.from(court));
-        return build(courtEntity);
+        return mapper.toDomain(courtRepository.save(mapper.toEntity(court)));
     }
 
     @Override
     public Optional<Court> findById(AggregateId id) {
-        CourtEntity courtEntity = jpaCourtRepository.findById(id.value()).get();
-        return Optional.of(build(courtEntity));
+        return Optional.of(mapper.toDomain(courtRepository.findById(id.value()).get()));
     }
 
     @Override
     public List<Court> findAll() {
-        return jpaCourtRepository.findAll().stream().map(this::build).collect(Collectors.toUnmodifiableList());
+        return courtRepository.findAll().stream().map(mapper::toDomain).toList();
     }
 
     @Override
     public List<Court> findByFacilityId(AggregateId facilityId) {
-        return jpaCourtRepository.findAllByFacilityId(facilityId.value()).stream().map(this::build)
-                .collect(Collectors.toUnmodifiableList());
+        return courtRepository.findAllByFacilityId(facilityId.value()).stream().map(mapper::toDomain).toList();
     }
 
     @Override
     public int deleteById(AggregateId id) {
-        jpaCourtRepository.deleteById(id.value());
+        courtRepository.deleteById(id.value());
         return 1;
     }
 
     @Override
     public int deleteByFacilityId(AggregateId facilityId) {
-        jpaCourtRepository.deleteByFacilityId(facilityId.value());
+        courtRepository.deleteByFacilityId(facilityId.value());
         return 1;
     }
 
     @Override
     public List<Court> findByIds(List<AggregateId> ids) {
-        return jpaCourtRepository.findAllById(ids.stream().map(AggregateId::value).collect(Collectors.toList()))
-                .stream().map(this::build).collect(Collectors.toUnmodifiableList());
+        return courtRepository.findAllById(ids.stream().map(AggregateId::value).toList())
+                .stream().map(mapper::toDomain).toList();
     }
 
     @Override
     public boolean existsById(AggregateId id) {
-        return jpaCourtRepository.existsById(id.value());
+        return courtRepository.existsById(id.value());
     }
 
     @Override
     public boolean existsByIds(List<AggregateId> ids) {
-        return jpaCourtRepository.existsByIds(ids.stream().map(AggregateId::value).collect(Collectors.toList()),
-                ids.size());
+        return courtRepository.existsByIds(ids.stream().map(AggregateId::value).toList(), ids.size());
     }
 
     @Override
     public boolean existsByIdAndOwnerId(AggregateId id, AggregateId userId) {
-        return jpaCourtRepository.existsByIdAndOwnerId(id.value(), userId.value());
+        return courtRepository.existsByIdAndOwnerId(id.value(), userId.value());
     }
 }
